# landscapes-ml

./: README.md  main.py  pyproject.toml
conf/landscapes_relay/: config.yaml
conf/landscapes_relay/alg/: erm.yaml
conf/landscapes_relay/configen/landscapes/algorithms/erm/: conf.py
conf/landscapes_relay/configen/landscapes/data/datamodules/wakehurst/: conf.py
conf/landscapes_relay/configen/landscapes/models/meta/ema/: conf.py
conf/landscapes_relay/configen/landscapes/models/meta/ft/: conf.py
conf/landscapes_relay/configen/landscapes/models/vision/: conf.py
conf/landscapes_relay/configen/landscapes/relay/: conf.py
conf/landscapes_relay/configen/pytorch_lightning/trainer/trainer/: conf.py
conf/landscapes_relay/dm/: clip.yaml  wakehurst.yaml
conf/landscapes_relay/logger/: logger.yaml
conf/landscapes_relay/meta_model/: bitfit.yaml  ema.yaml  lp.yaml
conf/landscapes_relay/model/: clip.yaml  convnext.yaml  regnet.yaml  resnet.yaml
conf/landscapes_relay/trainer/: trainer.yaml
external_confs/alg/: erm.yaml
external_confs/dm/: defaults.yaml  wakehurst.yaml
external_confs/logger/: ls.yaml
external_confs/model/seer/: rg10b.yaml  rg256gf.yaml
hydra_plugins/: sp_plugins.py
landscapes/: conf.py  metrics.py  relay.py  schedulers.py  transforms.py
landscapes/algorithms/: __init__.py  base.py  erm.py
landscapes/data/datamodules/: wakehurst.py
landscapes/data/datasets/: __init__.py  wakehurst.py
landscapes/models/: __init__.py  base.py  vision.py
landscapes/models/meta/: __init__.py  base.py  detection.py  ema.py  ft.py
